--- a/teyvatVN/src/index.css
+++ b/teyvatVN/src/index.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 :root {
   /*KEEP ME font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; KEEP ME*/
